fixed overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,8 @@ html {
 }
 
 .main-page {
+	display: flex;
+	flex-direction: column;
 	min-height: 100vh;
 	background: #80ada3;
 	display: flex;
@@ -29,7 +31,7 @@ html {
 }
 .calculator h1 {
 	color: #e6cfbb;
-	margin: 0.5rem;
+	margin: 0.75rem;
 	font-size: 1rem;
 }
 
@@ -37,7 +39,7 @@ html {
 	display: grid;
 	grid-template-columns: 25% 25% 25% 25%;
 	grid-template-rows: 14% 14% 14% 14% 14% 14% 14%;
-	gap: 0.75rem;
+	/* gap: 0.75rem; */
 	padding: 1rem;
 }
 
@@ -48,7 +50,7 @@ html {
 	outline: 2px solid #100b079e;
 	resize: none;
 	padding: 1rem;
-	margin: 1rem;
+	margin-bottom: 1rem;
 	font-family: "Press Start 2P", cursive;
 	font-size: 1.2rem;
 	letter-spacing: 0.3rem;
@@ -56,17 +58,25 @@ html {
 	grid-column: 1 / 5;
 	grid-row: 1 / 3;
 }
-textarea:focus {
-	outline: none;
-}
 
-button {
+.button {
 	padding: 2rem 2rem;
+	margin: 0.25rem;
 	background: #e29e4a;
 	border-radius: 1rem;
 	font-family: "Press Start 2P", cursive;
 	transition: ease-in-out 0.2s;
 }
-button:hover {
-	background: #ce8327;
+.button:hover {
+	background: #f89f31;
+}
+
+.button1,
+.button20 {
+	background: #f66153;
+}
+
+.button1:hover,
+.button20:hover {
+	background: #ff3825;
 }
